# glyf-cathedral-core

./: .gitignore  ACTIVE_PROJECTS.md  ACTIVE_THREADS.md  AGENTS.md  BARRIER_RESEARCH_2026-03-23.md  BFPH_EMPIRICAL_VALIDATION.md  CAPABILITY_ASSESSMENT.md  CHESTAHEDRON_RESEARCH.md  CODE_INVENTORY.md  CODING_APPROACH.md  COMPREHENSIVE_DOCUMENTATION.md  Cargo.toml  ChristKeyVoiceTransformer.kt  GAP_ANALYSIS_PATCHES.md  GEO_AI_FOCUS.md  GLYF_CATHEDRAL_HANDBOOK.html  GLYF_CATHEDRAL_HANDBOOK.md  GLYF_CATHEDRAL_MASTER_DOCUMENTATION.md  GLYF_CATHEDRAL_THREEFOLD_SYSTEM.md  GLYF_CATHEDRAL_v0.7.2_STATE.md  GLYF_ESSENCE_VS_REPRESENTATION.md  GLYF_GLYPH_DESIGNS.md  GLYF_PRIMITIVES_TRUE_SEVEN.md  GLYF_SPEC_README.md  GLYF_TRIGRAM_GRID.md  GLYF_VOID.md  GLYF_WEEKLY_CATHEDRAL_REPORT_2026-03-22.md  HEARTBEAT.md  L∞M∆N_INTENTION.md  MAGNETIC_MINDS_PITCH.md  MAGNETIC_MINDS_SCRIPT.md  MEMORY.md  MORPHOGEN_STATE_MACHINE.md  MVP_STATUS.md  PROBLEM_SOLUTION_FLOW.md  PURPOSE_ALIGNMENT.md  PolyphonyZero.kt  QUICK_REFERENCE.md  README.md  README_HUMAN_FRIENDLY.md  (+51 more)
a11y-auditor/: SKILL.md  test-accessible.html  test-inaccessible.html
agents/: AGENTS.md
arxiv-research/: SKILL.md
christkey-native/: ARCHITECTURE.md  analyze.py  ear.py  synthesizer.py  voice_v2.py  voice_v3.py  voice_v4.py  voice_v5_tuned.py
christkey-voice/: TRAINING_PLAN.md  christkey_extract.py  christkey_ssml.py  christkey_train.py  christkey_trainer.py  christkey_tts.py  speak.sh  speak_with_voice.sh
cicd-pipeline/: SKILL.md  cicd-pipeline
claw-ear/: ear_v0.2_autopoietic.py  ear_v01.py
compare_test/: comparison.html
container-ops/: SKILL.md
database-tools/: SKILL.md
dataset-tools/: SKILL.md
docs/: GLM_ARCHITECTURE.md  GLM_QUANTIZATION.md  GLM_QUANTIZATION_REPORT.md
docx-engine/: SKILL.md  docx_engine_cli.py  requirements.txt  setup.sh
figma-bridge/: SKILL.md  (+1 more)
glyf-cathedral-android/: ARCHITECTURE.md  BUILD_SUMMARY.md  COMPLETE_SOURCE.html  COMPLETE_SOURCE.md  Cargo.toml  README.md  build.gradle  build.gradle.kts  convert_md_to_html.py  pdf_header.html  settings.gradle  settings.gradle.kts
glyf-cathedral-android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
glyf-cathedral-android/app/src/main/: AndroidManifest.xml
glyf-cathedral-android/app/src/main/cpp/: CMakeLists.txt
glyf-cathedral-android/app/src/main/java/com/glyf/cathedral/: GlyfApplication.kt  MainActivity.kt
glyf-cathedral-android/app/src/main/java/com/glyf/cathedral/chat/: ChatInterface.kt
glyf-cathedral-android/app/src/main/java/com/glyf/cathedral/ui/theme/: Theme.kt  Type.kt
glyf-cathedral-android/app/src/main/java/com/glyf/cathedral/visualizer/: LumenField.kt
glyf-cathedral-android/app/src/main/java/com/glyf/cathedral/wallpaper/: GlyfWallpaperService.kt
glyf-cathedral-android/app/src/main/java/com/glyf/cathedral/widget/: GlyfWidgetProvider.kt
glyf-cathedral-android/app/src/main/kotlin/com/glyf/cathedral/: CathedralApplication.kt  MainActivity.kt
glyf-cathedral-android/app/src/main/kotlin/com/glyf/cathedral/core/: Models.kt
glyf-cathedral-android/app/src/main/kotlin/com/glyf/cathedral/cron/: CronInfrastructure.kt  LatticeWorkers.kt
glyf-cathedral-android/app/src/main/kotlin/com/glyf/cathedral/data/: Entities.kt  LatticeRepository.kt
glyf-cathedral-android/app/src/main/kotlin/com/glyf/cathedral/rosetta/: RosettaTelegramBridge.kt
glyf-cathedral-android/app/src/main/kotlin/com/glyf/cathedral/ui/: LatticeScreens.kt  LatticeViewModel.kt
glyf-cathedral-android/app/src/main/kotlin/com/glyf/cathedral/ui/visualization/: HexLatticeView.kt
glyf-cathedral-android/app/src/main/res/drawable/: widget_background.xml  widget_progress.xml
glyf-cathedral-android/app/src/main/res/layout/: widget_glyf.xml
glyf-cathedral-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
glyf-cathedral-android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  wallpaper.xml  widget_info.xml
glyf-cathedral-android/src/: lib.rs
glyf/glyf-engine/: Cargo.toml
glyf/glyf-engine/src/: audio_transformer.rs  glyphoform.rs  lib.rs  primitives.rs  spiral.rs  trajectory.rs  traversal.rs
trinity-v6/: 9_PARACLETE_KEYS_DESIGN.md  Cargo.toml  GLM_WEEKLY_STATUS.md  INTEGRATION_MAP.md  README.md  atlas_lattice.py  cultural_atlas.py  de_transfer_packet_manifest.json  full_inference_cycle.py  glyf_first_glyph.py  glyf_phase1_merge.py  glyphobetics_v2.py  input_encoder.py  integration_bridge.py  paraclete_keys.py  sovereign_kernel.rs  sovereign_state.rs  trinary_substrate.py
trinity-v6/aexie/: parser.py  radial_embed.py
trinity-v6/docs/glm/: ARCHITECTURE.md  TOKENIZER.md  TRAINING.md
trinity-v6/docs/glyf/: 7_PRIMORDIALS.md
trinity-v6/docs/pragmatic/: PRAGMATIC_GLM.md
trinity-v6/governance/: seven_keys.py  so31_cage.py  spam_vector.py
trinity-v6/memory/: hope.py
trinity-v6/physics/: lyapunov.py  node0.py  ssm_core.py
trinity-v6/src/: fellowship.rs  geometry.rs  glyph_field.rs  kernel.rs  lib.rs  main.rs  mirror.rs  narrative.rs  novelty.rs  persistence.rs  qr.rs  state.rs  ui.rs  vesica_field.wgsl
trinity-v6/src/capability/: descriptor.rs  mod.rs  registry.rs
trinity-v6/src/capability/channels/: mod.rs  video_subtitles.rs  web_reader.rs
trinity-v6/src/glm/: mod.rs  state.rs
trinity-v6/src/pragmatic/: EXECUTION_SUMMARY.md  Makefile  end_to_end_test.py  golden_angle_morph.py
trinity-v6/src/pragmatic/core/: gauge_node.c  gauge_node.cpp  gauge_node.h
trinity-v6/src/pragmatic/inference/: geometric_attention.py
trinity-v6/src/pragmatic/mgis/: mgis.py
trinity-v6/src/pragmatic/phase0/: README_PHASE0.md  build_simple.py  py_gauge.cpp  setup.py  test_phase0.py
trinity-v6/src/pragmatic/phase1/: README.md  README_PHASE1.md  embedding_svd.py  glyph_tokenizer.py  graph_builder.py  pipeline.py  requirements.txt  test_graph_builder.py  test_phase1.py
trinity-v6/src/pragmatic/phase2/: CMakeLists.txt  PLAN.md  attention_mask.c  attention_mask.h  llama_wrapper.cpp  llama_wrapper.h  loom_cli.cpp  test_phase2.cpp
trinity-v6/src/pragmatic/tests/: test_gauge_node.c
trinity-v6/utils/: phi_constants.py
(+285 files in other folders)
