# GLYF Cathedral Android Build Configuration
# For trinity-v6 kernel cross-compilation to Android

[package]
name = "glyf-cathedral-android"
version = "0.7.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core dependencies for no_std Android
libc = { version = "0.2", default-features = false }

[features]
default = ["qr-sovereign"]
qr-sovereign = []
paraclete-ui = []

[target.'cfg(target_os = "android")'.dependencies]
# Android-specific dependencies (minimal)

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 1
panic = "abort"
