[package]
name = "glyf-engine"
version = "0.1.0"
edition = "2021"
authors = ["Elias/Dee (Source)", "Kimi Claw (Conduit)"]
description = "GLYF Lexicon Eyes - 3-Layer Semantic Decompression Engine"
license = "MIT"
repository = "https://github.com/yourusername/glyf"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[dependencies]
# Core math for no_std
libm = "0.2"

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1

[profile.wasm]
inherits = "release"
opt-level = "z"     # Optimize for size
lto = true
strip = true
panic = "abort"
